Bug 330244 - Muon updater do not applies updates - clicking install updates asks for password and does nothing
Summary: Muon updater do not applies updates - clicking install updates asks for passw...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-21 11:53 UTC by Luis Fernando Planella Gonzalez
Modified: 2016-03-02 13:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.1.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luis Fernando Planella Gonzalez 2014-01-21 11:53:48 UTC
When there are system updates, the updates icon appears in the notification area.
Opening muon updater shows all updates. However, when attempting to install them, after authenticating, the application just reloads and shows the updates again - nothing is installed.
I have to use muon package manager to install updates.

Reproducible: Always

Steps to Reproduce:
1. Open muon updater
2. Click Install updates
3. Enter your credentials
4. Nothing happens
Actual Results:  
Updates are not installed. 

Expected Results:  
The updates should be downloaded and installed as usual.

Using Kubuntu 13.10 with the kubuntu updates ppa enabled (not the backports)
Comment 1 Harald Sitter 2014-01-29 13:29:53 UTC
Are you sure that you did not reload the packages first? (more menu check for updates, or ctrl-r).

If not, can you reproduce this always? Across muon-updater restarts and system reboots?
Comment 2 Luis Fernando Planella Gonzalez 2014-01-29 14:18:05 UTC
Mmm, it is not reproducible always.
Most of the time, clicking he updates icon, muon updater doesn't manages to install updates, specially on first reboot.
However, when I tried to get console output, and launched muon-updater via command line, it worked as expected - updates were applied.
Is there some logging I may turn on to help isolating the issue?
Comment 3 Harald Sitter 2014-01-29 14:58:32 UTC
run `kdebugdialog` and activate everything. after that all kde applications should spew output into ~/.cache/upstart/startkde.log.

however, muon unfortunately has very limited amounts of debug output, so I am not sure that would actually yield any useful results. worth a try anyway though.

there is bug #330053 which only happens after you manually reloaded the list of available updates, but since that is not the case for you it will be jolly hard to debug. in particularly the fact that it only sometimes happens after startup doesn't help ;)
what you could try to do is... if it fails, quickly run `ps aux` in a terminal and attach the output to this bug report. it may be that another application is interfering with the update process, however that generally should be detected and reported by muon.
Comment 4 Aleix Pol 2014-01-30 01:33:09 UTC
I've been trying and it doesn't update anythign indeed, after reloading.
Comment 5 Aleix Pol 2014-01-30 03:21:36 UTC
Git commit b966840d9e1addc6c72cf45ab22f1ca088b29a73 by Aleix Pol.
Committed on 30/01/2014 at 03:21.
Pushed by apol into branch '2.1'.

Change how we manage to get the clean cache

At the moment we were taking advantage of a bug (or anomaly) in QApt where
packages market as ToKeep are not being listed as marked, so this would provide
us proper UI feedback but then when intending to work it wasn't working properly.

This patch instead considers a clean cache the one received on ::prepare()
instead. I was able to reproduce the bug, now I can't reproduce anymore.

M  +17   -3    libmuon/backends/ApplicationBackend/ApplicationUpdates.cpp
M  +2    -0    libmuon/backends/ApplicationBackend/ApplicationUpdates.h

http://commits.kde.org/muon/b966840d9e1addc6c72cf45ab22f1ca088b29a73
Comment 6 Harald Sitter 2014-01-30 08:01:18 UTC
Fix verified. The reported issue is no longer present; after reloading, muon-updater continues to work as expected.
Comment 7 Aleix Pol 2014-01-30 11:50:00 UTC
Luis Fernando, can you please verify it's the same bug?
Comment 8 Aleix Pol 2014-01-30 11:50:45 UTC
waiting for luis fernando to answer
Comment 9 Luis Fernando Planella Gonzalez 2014-01-30 13:26:15 UTC
Sorry guys, I've never compiled muon myself, and the README doesn't help ;)
Are there some nightly packages I can try?
Comment 10 Harald Sitter 2014-01-30 13:33:23 UTC
For what it's worth, you might just wait for until we push an update into Kubuntu 13.10, which supposedly should happen sometime within the next two weeks.

Or if you want to build from git now:
(before all of this you may wan to uninstall all of muon from packages `sudo apt-get purge libmuonprivate1`)

sudo apt-get install git cmake build-essential
sudo apt-get build-dep muon
git clone -b 2.1 git://anongit.kde.org/muon.git
mkdir muon/build
cd muon/build
cmake -DCMAKE_INSTALL_PREFIX=/usr
make
sudo make install
kbuildsycoca4

now all your muons are on what will become 2.1.3.

to revert again:
cd muon/build
sudo make uninstall
cd ../../
rm -rf muon
sudo apt-get install muon-discover muon-updater muon-notifier
Comment 11 Luis Fernando Planella Gonzalez 2014-01-30 15:40:35 UTC
I've cloned the git repo, compiled and installed the 2.1 branch.
I did the following test:
* Installed vlc
* Added the vlc daily build PPA
* Issued an apt-get update
* Reboot
* As muon-updater didn't start automatically (I think only the package contains the .desktop for autostart), I started it manually
* Clicked refresh packages list, just to be sure
* Clicked install updates
It worked correctly. Since I don't have 100% the same environment as before, I cannot confirm 100% sure that it is fixed, but seems to.
I'll leave this version installed, and see if with future updates I get the same issue.

BTW: how can I contribute some missing Brazilian Portuguese translations? ;)
Comment 12 Aleix Pol 2014-01-30 16:10:02 UTC
Then I'll close the bug, if you reproduce again, please reopen.

Thanks for the cooperation! :)

You can get in touch with the team:
http://l10n.kde.org/stats/gui/trunk-kde4/team/pt_BR/
Comment 13 Aleix Pol 2014-01-30 16:10:32 UTC
Then I'll close the bug, if you reproduce again, please reopen.

Thanks for the cooperation! :)

You can get in touch with the team:
http://l10n.kde.org/stats/gui/trunk-kde4/team/pt_BR/